# visp_unity

./: .gitignore  README.md  visp_unityPackage.unitypackage
examples/blob/: CMakeLists.txt  test-blob-opencv.cpp  test-blob.cpp
unityProject/: .gitignore  Assembly-CSharp.csproj  README.md  UnityProject.sln
unityProject/Assets/: PassFrame.cs  PoseEstimation.cs  Script.cs  demo.cs  demo.cs~  scene.unity
unityProject/Assets/Materials/: CubeMaterial.mat  LineMaterial.mat
unityProject/Assets/Prefab/: WebcamHolder.prefab
unityProject/Assets/Scenes/: scene.unity  scene_ar.unity  scene_mbt.unity
unityProject/Assets/Scripts/: Script_ar.cs  Script_mbt.cs  Webcam.cs  demo.cs
unityProject/ProjectSettings/: ProjectSettings.asset  TagManager.asset
unityProject/Temp/: UnityTempFile-18e933c58fd8d5c41b732c7d986d777c
unityProject/Temp/__Backupscenes/: 0.backup
vispWrapper/: CMakeLists.txt  README.md  ViSPUnity.cpp  ViSPUnity.h  visp-demo.cpp  visp-demo.h  visp-plugin-frame.cpp  visp-plugin-frame.h  visp-plugin-pose-estimation.cpp  visp-plugin-pose-estimation.h
vispWrapper/doc/: config-doxygen.cmake  config-doxygen.in  mainpage.doc.in  modules.doc  tutorial-visp-unity-passframe.doc  tutorial-visp-unity-pose-estimate.doc  tutorial-visp-wrapper-basic.doc  tutorial.doc
vispWrapper/doc/image/: Thumbs.db
